--- a/app/templates/play/overview.html
+++ b/app/templates/play/overview.html
@@ -22,7 +22,7 @@
     </script>
     {% if current.have_won() %}
         <h1 style="color:green">
-            ⅴ <!-- Checkmark -->
+            <span title="You won this scenario! The requirements in Overall Settings have been met.">✅</span>
             {{ current.title }}
         </h1>
     {% else %}
